static/css/cssvr.css
@media only screen and (max-width: 950px) {


.introTextD{
    font-family: 'Open Sans', sans-serif;
    padding-left:20%;
    padding-right:20%;
    font-size:13px;
    letter-spacing:2px;
    font-weight:300;
    line-height:40px;
    margin-top:40px;
    text-decoration: none;
}

.headerTextD {
    font-size: 45px;
    font-family: 'Open Sans Condensed', sans-serif;
    font-weight: 700;
    letter-spacing: 2px;
    padding-left: 10%;
    padding-right: 10%;
    margin: 45px auto 0;
}

.heroD{
    width: 100%;
    background-color: #f2f2f2;
    background-repeat: repeat;
    background-size: cover;
    background-position: 50% 50%;
    width:100%;
    text-align: center;
    vertical-align: middle;
    background-image: url(/img/vherobg.jpg);
    background-size: cover;
    background-size: cover;
    margin-top: -214px;
    padding-bottom: 100px;
    z-index: 99999;
    padding-top: 184px;
}

.textWrap{
    padding-left:10%;
    padding-right:10%;
    width:100%;
    margin:0 auto;
    text-align:left;
    padding-bottom:50px;
}

.footerForm {
    width: 100%;
    margin: 60px auto 0;
    text-align: center;
}

.words{
display:inline;
margin:0 auto;
}


.words-1 span{
    position: absolute;
    opacity: 0;
    overflow: hidden;
    -webkit-animation: rotateWord 18s linear infinite 0s;
    -moz-animation: rotateWord 18s linear infinite 0s;
    -o-animation: rotateWord 18s linear infinite 0s;
    -ms-animation: rotateWord 18s linear infinite 0s;
    animation: rotateWord 18s linear infinite 0s;
}


.heroText2{
font-size:45px;
font-family: 'Open Sans Condensed', sans-serif;
font-weight:700;
letter-spacing:2px;
text-align:center;
padding-left:0%;
padding-right:0%;
position:static;
top:33%;
margin: 0 auto;
left: 0;
right: 0;
display:inline;
margin-left:0%;
}


.hero {
    width:100%;
    height:initial;
    padding-top:200px;
    padding-bottom:100px;
    text-align:center;
    background-color:#f1f1f1;
    margin-top: -220px;
    background-position:65% 50%;
}


.showBr{
display: block;
}

.centz{
text-align:center;
}

.fb {
    height: 18.75px;
    margin-right: 20px;
}

.insta {
    height: 18.75px;
    margin-right: 20px;
}

.twitter {
    margin-right: 20px;
    height: 18.75px;
}

.pin {
  height: 18.75px;
}

.logo {
    width: 98px;
    height: 100px;
}


.heroText{
font-size:36px;
font-family: 'Open Sans Condensed', sans-serif;
font-weight:700;
letter-spacing:2px;
padding-left:10%;
padding-right:10%;
position:static;
}

.arrow{
    display: none;
}


#intro{
width:100%;
padding-top:60px;
padding-bottom:0px;
text-align:center;
}

.introText{
font-family: 'Open Sans', sans-serif;
padding-left:10%;
padding-right:10%;
font-size:15px;
letter-spacing:2px;
line-height:40px;
}

.blockMain{
width:100%;
margin:0 auto;
text-align:left;
padding-left:0px;
padding-right:60px;
padding-bottom:60px;
background:url(/img/vbackground.jp);
background-position:right;
background-repeat:no-repeat;
background-size:contain;
border-left: 50px solid #fff;
    border-right: 50px solid #fff;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    margin-left: -10px;
}

.blockText{
font-size:27px;
font-family: 'Open Sans Condensed', sans-serif;
font-weight:700;
letter-spacing:2px;
margin-bottom:20px;
}

.blockLine{
    width: 35px;
    height: 2px;
    background-color: #000;
    margin-bottom:60px;
}


.blockLine2{
    width: 35px;
    height: 2px;
    background-color: #000;
    margin-bottom:60px;
    margin:0 auto;
}

.triBlock {
  display: table;
  height:auto;
  position: relative;
  width:100%;
  margin:0 auto;
}

.triBlockCol1 {
  display: block;
  width: 100%;
  padding-top:40px;
    padding-bottom:70px; 
    padding-left:40px;
    padding-right:40px; 
    vertical-align: top;
    text-align:left;
    background-color:rgba(241, 241, 241, 0.95);
    border-right:0px solid #fff;
    background-image:url(/img/vline.jpg);
    background-position:bottom;
    background-repeat:repeat-x;
}

.triBlockCol2 {
border-left:0px solid #fff;
border-right:0px solid #fff;
  display: block;
  width: 100%;
  padding-top:40px;
    padding-bottom:70px;  
        padding-left:40px;
    padding-right:40px; 
    vertical-align: top;
    text-align:left;
        background-color:rgba(241, 241, 241, 0.95);
    background-image:url(/img/vline.jpg);
    background-position:bottom;
    background-repeat:repeat-x;
    margin-top:60px;
    margin-bottom:60px;

}

.triBlockCol3 {
  display: block;
  width: 100%;
  padding-top:40px;
    padding-bottom:70px;  
        padding-left:40px;
    padding-right:40px; 
    vertical-align: top;
    text-align:left;
    border-left:0px solid #fff;
        background-color:rgba(241, 241, 241, 0.95);
            background-image:url(/img/vline.jpg);
    background-position:bottom;
    background-repeat:repeat-x;
}


.number{
padding:7.5px;
background-color:#000;
font-size:12px;
font-family: 'Open Sans Condensed', sans-serif;
font-weight:700;
letter-spacing:2px;
text-align:center;
height:20px;
width:20px;
color:#fff;
}

.triTitle{
font-family: 'Open Sans', sans-serif;
font-size:12px;
letter-spacing:2px;
margin-top:15px;
margin-bottom:15px;
font-weight:700;
}

.triText{
font-family: 'Open Sans', sans-serif;
font-size:13.5px;
letter-spacing:2px;
font-weight:300;
line-height:30px;
}




.whatBox{
width:100%;
padding-bottom:0px;
text-align:center;
margin-top:0px;
}

.whatBoxRow {
  display: table;
  height:auto;
  position: relative;
  width:80%;
  margin:0 auto;
  margin-top:60px;
}

.whatBoxCol1 {
  display: table-cell;
  width: 220px;
  
    vertical-align: TOP;
    text-align:left;

}

.whatBoxCol2 {
  display: table-cell;
  width: 100%;
    padding-bottom:0px; 
    padding-left:40px;
    padding-right:0px; 
    vertical-align: MIDDLE;
    text-align:left;
}

.pImg{
width:100px;
height:100px;
}

.whatTitle{
font-family: 'Open Sans', sans-serif;
font-size:12px;
letter-spacing:2px;
margin-top:15px;
margin-bottom:15px;
font-weight:700;
}

.whatText{
font-family: 'Open Sans', sans-serif;
font-size:13.5px;
letter-spacing:2px;
font-weight:300;
line-height:30px;
}

.footerLogo{
    width:95px;
    height:95px;
}


.divider{
    display:inline;
    margin-left:20px;
    margin-right:20px;
}

a.footerLink:link{
font-family: 'Open Sans', sans-serif;
font-size:13.5px;
letter-spacing:2px;
font-weight:700;
display:inline;
text-decoration:none;
color:#000;
}

a.footerLink:visited{
font-family: 'Open Sans', sans-serif;
font-size:13.5px;
letter-spacing:2px;
font-weight:700;
display:inline;
text-decoration:none;
color:#000;
}

a.footerLink:hover{
color:#3f3f3f;
cursor:pointer;
}

.copyright{
font-family: 'Open Sans', sans-serif;
font-size:12px;
letter-spacing:2px;
font-weight:300;
}

.footer{
margin-top: 60px auto 30px;
}

#form{
font-family: 'Open Sans', sans-serif;
    font-weight: 300;
    padding: 15px 15px 15px 15px;
    width: 200px;
    font-size: 12px;
    border: none;
    margin-right: 15px;
    background-color:#f2f2f2;
    display:inline-block;
    letter-spacing:2px;
}

#form1{
font-family: 'Open Sans', sans-serif;
    font-weight: 300;
    padding: 15px 15px 15px 15px;
    width: 200px;
    font-size: 12px;
    border: none;
        background-color:#f2f2f2;
    display:inline-block;
    letter-spacing:2px;
}

#form2{
font-family: 'Open Sans', sans-serif;
    font-weight: 300;
    padding: 15px 15px 15px 15px;
    width: 448px;
    font-size: 12px;
    border: none;
        background-color:#f2f2f2;
    display:inline-block;
    letter-spacing:2px;
    margin-left:-3px;
}


.submitButton{
background-color: #000;
    margin: 0 auto;
    display: inline-block;
    text-align: center;
    color: #fff;
font-family: 'Open Sans', sans-serif;
    font-weight: 600;
    letter-spacing: 2px;
    padding: 22px 50px 22px 50px;
-webkit-appearance: none;
    font-size: 12px;
    MARGIN-TOP:20PX;
    border:none;
}

.spaceBottom{
    margin-top:0px;
}

.spaceBottom2{
margin-top:60px;
}

}



@media only screen and (max-width: 650px) {

    .account {
        margin: 60px 20px 0;
        display: flex;
        flex-direction: column;
        border: 1px solid red;
    }

    .subscription {
        margin: 60px 20px 60px;
        display: grid;
        grid-template-columns: 1fr;
        grid-column-gap: 50px;
    }

    .subOptions {
        margin: 60px 0 30px;
        display: grid;
        grid-template-columns: 0.5fr 0.5fr;
        grid-column-gap: 60px;
    }

    .promo {
        margin: 0;
        display: grid;
        grid-template-columns: 1fr;
        grid-row-gap: 10px;
    }    

    .ship {
        margin: 30px 0 0;
        display: grid;
        grid-template-columns: 1fr;
        grid-row-gap: 10px;
    }

    .bill {
        margin: 30px 0 0;
        display: grid;
        grid-template-columns: 1fr;
        grid-row-gap: 10px;
    }

    .pay {
        margin: 30px 0 0;
        display: grid;
        grid-template-columns: 1fr;
        grid-row-gap: 10px;
    }

    .update {
        display: flex;
        justify-content: center;
    }

    .finalButton {
        margin: 0 50px;
        padding: 15px 30px;
        background: #404040;
        color: #E0E0E0;
    }

#form{
font-family: 'Open Sans', sans-serif;
    font-weight: 300;
    padding: 15px 15px 15px 15px;
    width: 100px;
    font-size: 12px;
    border: none;
    margin-right: 15px;
    background-color:#f2f2f2;
    display:inline-block;
    letter-spacing:2px;
}

#form1{
font-family: 'Open Sans', sans-serif;
    font-weight: 300;
    padding: 15px 15px 15px 15px;
    width: 100px;
    font-size: 12px;
    border: none;
        background-color:#f2f2f2;
    display:inline-block;
    letter-spacing:2px;
}

#form2{
font-family: 'Open Sans', sans-serif;
    font-weight: 300;
    padding: 15px 15px 15px 15px;
    width: 248px;
    font-size: 12px;
    border: none;
        background-color:#f2f2f2;
    display:inline-block;
    letter-spacing:2px;
    margin-left:-3px;
}


}

